# icc-eval-etl

./: .dockerignore  .gitignore  CLAUDE.md  DEVNOTES.md  Dockerfile  LICENSE  README.md  collection.yaml  docker-compose.yaml  icc-data-views.sql  main.py  pyproject.toml
agent_docs/: api-quirks.md  architecture.md  package-structure.md
database_mcp_server/: CLAUDE.md  DEPLOYMENT.md  README.md  __main__.py  db.py  materialize.py  server.py
icc_eval_etl/: config.py
icc_eval_etl/clients/: base.py  europepmc.py  github.py  icite.py  nih_reporter.py  openalex.py
icc_eval_etl/models/: config.py  europepmc.py  github.py  icite.py  nih_reporter.py  openalex.py
icc_eval_etl/pipeline/: orchestrator.py  writers.py
icc_eval_server/: CLAUDE.md  DEPLOYMENT.md  README.md  __main__.py  db.py  materialize.py  server.py
