[project]
name = "icc-eval-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "typer>=0.15",
    "pyyaml>=6.0",
    "google-analytics-data>=0.20.0",
    "google-analytics-admin>=0.27.0",
    "google-auth-oauthlib>=1.2.4",
    "mcp[cli]>=1.26.0",
    "duckdb>=1.4.4",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
